--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/kristinmunn/itc230/issues"
   },
-  "homepage": "https://github.com/kristinmunn/itc230#readme"
+  "homepage": "https://github.com/kristinmunn/itc230#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.3"
+  }
 }
