--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "web app for itc230",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,15 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3"
-  }
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "mocha": "^7.1.2"
+  },
+
+  "scripts": {
+    "lint": "eslint **/*.js",
+    "test": "mocha test/**"
+} 
 }
